Atualização nav-menu

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <ul>
                     <li><a href="#about">SOBRE</a></li>
                     <li><a href="#services">O QUE FAZEMOS</a></li>
-                    <li><a href="#team">Equipe</a></li>
-                    <li><a href="#contact">Contato</a></li>
+                    <li><a href="#team">EQUIE</a></li>
+                    <li><a href="#contact">CONTATO</a></li>
                 </ul>
             </nav>
         </div>
