--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
                     Apaixonada por arquétipos, tem ampla experiência na construção de personas, conceito criativo, identidade e posicionamento de marcas.
                     Possui grande sensibilidade e talento para escrita, arte e fotografia, além de um olhar perspicaz e forte poder de organização e estruturação, transformando caos
                     em ordem, complexidade em simplicidade, para desenvolvimento de estratégias e UIUX.
-                    Portfolio:<a href="https://www.behance.net/camilagrosser">Camila Grossera</a></p>
+                    Portfolio: <a href="https://www.behance.net/camilagrosser">Camila Grossera</a></p>
 
                     <p><strong>IGOR RAPOSO</strong>
-                     <p class="p-color">Programador e desenvolvedor front-end</p>
+                     <p class="p-color">desenvolvedor front-end</p>
                      Curioso, estudioso e persistente, é o responsável por traduzir design em linguagens digitais. Sua busca por novos rumos na vida
                      o fez desvendar os mistérios dos códigos, onde mergulhou fundo com disciplinada autonomia. Adora explorar as tendências e
                      novidades que surgem a cada dia e hoje tem a inteligência artificial como sua grande aliada para a agilidade dos projetos.
