--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <ul>
                     <li><a href="#about">SOBRE</a></li>
                     <li><a href="#services">O QUE FAZEMOS</a></li>
-                    <li><a href="#team">EQUIE</a></li>
+                    <li><a href="#team">EQUIPE</a></li>
                     <li><a href="#contact">CONTATO</a></li>
                 </ul>
             </nav>
