--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     Portfolio: <a href="https://www.behance.net/camilagrosser">Camila Grossera</a></p>
 
                     <p><strong>IGOR RAPOSO</strong>
-                     <p class="p-color">desenvolvedor front-end</p>
+                     <p class="p-color">Desenvolvedor front-end</p>
                      Curioso, estudioso e persistente, é o responsável por traduzir design em linguagens digitais. Sua busca por novos rumos na vida
                      o fez desvendar os mistérios dos códigos, onde mergulhou fundo com disciplinada autonomia. Adora explorar as tendências e
                      novidades que surgem a cada dia e hoje tem a inteligência artificial como sua grande aliada para a agilidade dos projetos.
