--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container">
             
             <div>
-                <h2>Um caminho para encontrar uma expressão autêntica</h2>
+                <h2>Um caminho para encontrar uma <br> expressão autêntica</h2>
             </div>
             <div>
                 <p>A Partícula veio ao mundo para contribuir com a criação de uma comunicação mais autêntica, alinhada à essência por trás de cada projeto, para que cada um encontre o caminho para sua verdadeira expressão. 
@@ -89,13 +89,13 @@
                     habilidades, talento e paixão</h2>
             </div>
             <div>
-                <p><strong>CAMILA GROSSERA</strong>
+                <p><strong>CAMILA GROSSER</strong>
                     <br>
                     <p class="p-color">Redatora, fotógrafa, designer e estrategista</p>
                     Apaixonada por arquétipos, tem ampla experiência na construção de personas, conceito criativo, identidade e posicionamento de marcas.
                     Possui grande sensibilidade e talento para escrita, arte e fotografia, além de um olhar perspicaz e forte poder de organização e estruturação, transformando caos
                     em ordem, complexidade em simplicidade, para desenvolvimento de estratégias e UIUX.
-                    Portfolio: <a href="https://www.behance.net/camilagrosser">Camila Grossera</a></p>
+                    Portfolio: <a href="https://www.behance.net/camilagrosser">Camila Grosser</a></p>
 
                     <p><strong>IGOR RAPOSO</strong>
                      <p class="p-color">Desenvolvedor front-end</p>
