--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Toda partícula é única e faz parte de um todo infinito que a convida a expressar sua essência ao mundo.
-                    Como grãos de areia, juntas, criam montanhas.</h1>
-                <a href="https://wa.me/+351935106005" target="_blank" class="btn">Fale Conosco</a>
+                <h1>Toda partícula é única e faz parte de um todo infinito que a convida a expressar sua essência ao mundo.</h1>
+                
             </div>
         </div>
     </section>
@@ -109,5 +108,12 @@
     </section>
    
     <script src="script.js"></script>
+    <footer>
+        <div id="contact">
+            <p>Costa da Caparica, Setúbal, Liaboia, portugal <br> 
+                somosparticula@gmail.com </p>
+                <a href="https://wa.me/+351935106005" target="_blank" class="btn">Fale Conosco</a>
+        </div>
+    </footer>
 </body>
 </html>
