--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <script src="script.js"></script>
     <footer>
         <div id="contact">
-            <p>Costa da Caparica, Setúbal, Liaboia, portugal <br> 
+            <p>Costa da Caparica, Setúbal, Lisboa, Portugal <br> 
                 somosparticula@gmail.com </p>
                 <a href="https://wa.me/+351935106005" target="_blank" class="btn">Fale Conosco</a>
         </div>
